@@ -7,6 +7,7 @@ CREATE TABLE tx_devlog_domain_model_entry (
 	pid int(11) DEFAULT '0' NOT NULL,
 
 	run_id varchar(50) DEFAULT '' NOT NULL,
+	sorting int(11) DEFAULT '0' NOT NULL,
 	severity int(11) DEFAULT '0' NOT NULL,
 	extkey varchar(255) DEFAULT '' NOT NULL,
 	message text NOT NULL,
